--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,4 @@ Levente Farkas <levente.farkas@egi.eu>
 
 Contributors
 ------------
-Full Name <email>
+Muhammad Aleem Sarwar <muhammad.aleem.sarwar@desy.de>
