--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [1.1.66]
+- Upgrade to latest Quarkus version
+
 ## [1.1.65]
 - Workaround Zenodo redirecting to invalid relative URL
 
