Upgrade to latest Quarkus version
Upgrade to Quarkus 3.21.2
Update readme, changelog, and version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [1.1.73]
+- Update logo to EOSC Beyond
+- Upgrade to latest Quarkus version
+
 ## [1.1.72]
 - Added automated Docker image building
 - Refactor to separate transfer and storage system interfaces
