Added initial implementation for S3 storage support

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [1.1.75]
+- Added support for S3 storage elements
+- Upgrade to latest Quarkus version
+
 ## [1.1.73]
 - Update logo to EOSC Beyond
 - Upgrade to latest Quarkus version
@@ -24,7 +28,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Upgrade to latest Quarkus version
 
 ## [1.1.65]
-- Workaround Zenodo redirecting to invalid relative URL
+- Workaround for Zenodo redirecting to invalid relative URL
 
 ## [1.1.63]
 - Added support for S3S
