--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,8 +5,12 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [1.1.80]
+- Implemented S3 storage support based on Min.io
+- Upgrade to latest Quarkus version
+
 ## [1.1.75]
-- Added support for S3 storage elements
+- Added stubs for S3 storage elements (needs implementation)
 - Upgrade to latest Quarkus version
 
 ## [1.1.73]
