feat: Extended endpoint GET /transfer/(jobId} to return status of each file in the job

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [1.1.85]
+- Endpoint GET /transfer/{jobId} now also returns status of each file in the job
+
 ## [1.1.80]
 - Implemented S3 storage support based on Min.io
 - Upgrade to latest Quarkus version
